--- a/VerbannteAutoren/main.css
+++ b/VerbannteAutoren/main.css
@@ -1,6 +1,12 @@
+body {
+   
+}
+
 div {
-    font-size: 14px;
+    font-size: 20pt;
     font-family: Helvetica Neue;
+    margin-left: 20pt;
+    margin-right: 20pt;
 }
 
 div a {
@@ -10,12 +16,14 @@ div a {
 }
 
 h2 {
-	font-size: 14pt;
+	font-size: 20pt;
     font-family: Helvetica Neue;
+    font-weight: bold;
+    margin: 40pt 20pt 10pt 20pt;
 
 }
 
 .buecher {
-    width:300px;
-    height:207px;
+    width: 100%;
+    margin: 20pt auto 20pt auto;
 }
